fixed textarea too high

--- a/website/static/website/scss/base/_base.scss
+++ b/website/static/website/scss/base/_base.scss
@@ -33,6 +33,7 @@ input {
 
 textarea {
     border: none;
+    height: 100px;
 
     &:focus {
         outline: none;
